--- a/src/main/webapp/view/login.html
+++ b/src/main/webapp/view/login.html
@@ -40,7 +40,7 @@
                 </div><!-- /.col -->
             </div>
         </form>
-        <a ui-sref="recuperar-senha">Eu esqueci minha senha</a><br>
+        <!--<a ui-sref="recuperar-senha">Eu esqueci minha senha</a><br>-->
 
     </div><!-- /.login-box-body -->
 </div><!-- /.login-box -->
